@@ -53,11 +53,13 @@
 			<tr>
 				<td>
 					<div>{dash_quality_country_total_invalid}</div>
-					<div>Invalid Recipients</div>
-					<div>Total number of invalid recipient countries across all activities.</div>
+					<div>Datasets</div>
+					<div>Total number of datasets reported by this publisher.</div>
 				</td>
 				<td>
-					
+					<div>{dash_quality_country_total_invalid}</div>
+					<div>Invalid Recipients</div>
+					<div>Total number of invalid recipient countries across all activities.</div>
 				</td>
 			</tr>
 			<tr>
