@@ -1,3 +1,8 @@
+Static site (2014-07-23 shi)
+==============================
+Added new column in Dash quality for datasets
+
+
 Static site (2014-06-25 shi)
 ==============================
 Added Dash to About page
